fix scrollbars on gtk3

--- a/themes/FlatColor/gtk-3.20/widgets/scrollbar.css
+++ b/themes/FlatColor/gtk-3.20/widgets/scrollbar.css
@@ -22,13 +22,13 @@ scrollbar {
     min-height: 8px;
     border: 4px solid transparent;
     background-clip: padding-box;
-    background-color: shade( @theme_selected_bg_color, 0.30 ); }
+    background-color: shade( @theme_selected_bg_color, 0.80 ); }
     scrollbar slider:hover {
-      background-color: shade( @theme_selected_bg_color, 0.50 ); }
+      background-color: shade( @theme_selected_bg_color, 0.80 ); }
     scrollbar slider:active {
       background-color: @theme_selected_bg_color; }
     scrollbar slider:disabled {
-      background-color: rgba(0, 0, 0, 0.192); }
+      background-color: shade( @theme_selected_bg_color, 0.80 ); }
   scrollbar.fine-tune slider {
     transition: all 0.3s cubic-bezier(0, 0, 0.2, 1), color 0, margin 0, border-width 0, min-width 0, min-height 0;
     min-width: 4px;
